# ECNU_Parallel_Computing

./: README.md
openmp_yannpp/src/examples/mnist/: CMakeLists.txt  mnist_deeplearning.cpp  mnist_simple.cpp
openmp_yannpp/src/examples/simple/: CMakeLists.txt  convolution.cpp  convolution_parallel.cpp  pooling.cpp  tf_dense.cpp
openmp_yannpp/src/examples/simple/openmp.dSYM/Contents/: Info.plist
openmp_yannpp/src/examples/simple/openmp.dSYM/Contents/Resources/DWARF/: openmp
openmp_yannpp/src/tests/: CMakeLists.txt  tests_mnist.cpp
openmp_yannpp/src/yannpp/: CMakeLists.txt
openmp_yannpp/src/yannpp/common/: array3d.h  array3d_math.h  array3d_math_serial.h
openmp_yannpp/src/yannpp/layers/: convolutionlayer.h  convolutionlayer_serial.h  poolinglayer.h
openmp_yannpp/src/yannpp/network/: network1.h
